Task 3 - Highlighting High Priority Tickets

--- a/index.html
+++ b/index.html
@@ -4,6 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Customer Support Ticket System</title>
+    <script src="cc_14.js" defer></script> 
+    <style>
+        .ticket {
+            margin: 10px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        .ticket button {
+            margin-top: 10px;
+            padding: 5px 10px;
+            background-color: #ff4d4d;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+
+        .ticket button:hover {
+            background-color: #c50000;
+        }
+
+        .ticket span {
+            font-weight: bold;
+        }
+    </style>
+    </style>
 </head>
 <body>
     <!---- Header Section -->
@@ -20,14 +47,13 @@
     </header>
     <!-- Main Content Section -->
     <main> 
-        <div id="ticketContainer" >
-
-        </div>
+        <div id="ticketContainer"></div>
     </main>
     <!-- Footer Section -->
      <br>
     <footer>
         <p>&copy; 2025 Customer Support Ticket System. All rights reserved.</p>
+        <p>By: Mbilu Mabilu</p>
     </footer>
 
 </body>
